--- a/LearnOpenGL/练习016:习题.md
+++ b/LearnOpenGL/练习016:习题.md
@@ -66,6 +66,35 @@ void main()
 }</pre>
 
 ## 尝试用不同的纹理环绕方式，设定一个从0.0f到2.0f范围内的（而不是原来的0.0f到1.0f）纹理坐标。试试看能不能在箱子的角落放置4个笑脸。记得一定要试试其它的环绕方式。
+这个纹理坐标的意思是,矩形右上角的坐标是图片2.0,2.0处,由于纹理坐标的范围是0到1之间,所以图片会出现在整个矩形的左下角的这四分之一处.<br/>
+而使用的纹理环绕方式不同,图片会出现不同效果.
+<pre>纹理坐标
+float vertices[] = {
+	//---- 位置 ----       ---- 颜色 ----     - 纹理坐标 -
+	0.5f,  0.5f, 0.0f,   1.0f, 0.0f, 0.0f,   2.0f, 2.0f,   // 右上
+	0.5f, -0.5f, 0.0f,   0.0f, 1.0f, 0.0f,   2.0f, 0.0f,   // 右下
+	-0.5f, -0.5f, 0.0f,   0.0f, 0.0f, 1.0f,   0.0f, 0.0f,   // 左下
+	-0.5f,  0.5f, 0.0f,   1.0f, 1.0f, 0.0f,   0.0f, 2.0f    // 左上
+};
+</pre>
+自己去把环绕方式改了试试效果.
+<pre>
+//环绕方式:左下角的图片以镜面的方式重复铺在了其它三个方向.
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, GL_MIRRORED_REPEAT);
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, GL_MIRRORED_REPEAT);
+
+//环绕方式:没有镜面效果,四张图依次平铺在矩形中.
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, GL_REPEAT);
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, GL_REPEAT);
+
+//环绕方式:左下角是长正常的图,其上方和右方以及右上方都重复纹理坐标的边缘,产生边缘被拉伸的效果.
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, GL_CLAMP_TO_EDGE);
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, GL_CLAMP_TO_EDGE);
+
+//环绕方式:左下方正常,右下方是镜面.上方两块都是黑色.
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, GL_MIRRORED_REPEAT);
+glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, GL_CLAMP_TO_BORDER);
+</pre>
 
 ## 尝试在矩形上只显示纹理图像的中间一部分，修改纹理坐标，达到能看见单个的像素的效果。尝试使用GL_NEAREST的纹理过滤方式让像素显示得更清晰.
 
