--- a/LearnOpenGL/练习016:习题.md
+++ b/LearnOpenGL/练习016:习题.md
@@ -1,4 +1,20 @@
 # 接着练习015做题,改动的都是015中的代码.
+习题2,3片段着色器用的都是下面这个:
+<pre>
+#version 330 core
+out vec4 FragColor;
+
+in vec3 ourColor;
+in vec2 TexCoord;
+
+uniform sampler2D texture1;
+uniform sampler2D texture2;
+
+void main()
+{
+	FragColor =texture(texture1,TexCoord);
+}
+</pre>
 
 ## 习题1:修改片段着色器，仅让笑脸图案朝另一个方向看.
 
