--- a/LearnOpenGL/练习016:习题.md
+++ b/LearnOpenGL/练习016:习题.md
@@ -130,5 +130,5 @@ glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, GL_NEAREST);//用GL_LINEAR
 </pre>
 
 ## 练习4:使用一个uniform变量作为mix函数的第三个参数来改变两个纹理可见度，使用上和下键来改变箱子或笑脸的可见度.
-
+这里代码比较多,放到另一个文件里了.
 
