--- a/LearnOpenGL/练习021:习题(坐标系统).md
+++ b/LearnOpenGL/练习021:习题(坐标系统).md
@@ -1,12 +1,38 @@
 # 
 ## 对GLM的projection函数中的FoV和aspect-ratio参数进行实验。看能否搞懂它们是如何影响透视平截头体的。
-/*
-第一个参数定义了fov的值，它表示的是视野(Field of View)，并且设置了观察空间的大小。
+* 第一个参数定义了fov的值，它表示的是视野(Field of View)，并且设置了观察空间的大小。
 如果想要一个真实的观察效果，它的值通常设置为45.0f，但想要一个末日风格的结果你可以将其设置一个更大的值。
-第二个参数设置了宽高比.
-第三和第四个参数设置了平截头体的近和远平面。我们通常设置近距离为0.1f，而远距离设为100.0f。
+* 第二个参数设置了宽高比.
+* 第三和第四个参数设置了平截头体的近和远平面。我们通常设置近距离为0.1f，而远距离设为100.0f。
 所有在近平面和远平面内且处于平截头体内的顶点都会被渲染。
 
 这里我还不清楚近平面和远平面和opengl坐标的关系，比如下面0.1f，3.0f，把图像截了一部分出来，0.1f，100.0f时不会截，不清楚如何映射的。
-*/
+
 projection = glm::perspective(glm::radians(45.0f), (float)SCR_WIDTH / (float)SCR_HEIGHT, 0.1f,3.0f);
+
+## 将观察矩阵在各个方向上进行位移，来看看场景是如何改变的。注意把观察矩阵当成摄像机对象。
+view = glm::translate(view, glm::vec3(1.0f, 1.0f, -3.0f));
+
+x控制左右移动，y控制上下，z前后。如果z设置的比较大，可能会离屏幕前的你过近，而超出屏幕，
+
+## 使用模型矩阵只让是3倍数的箱子旋转（以及第1个箱子），而让剩下的箱子保持静止。
+对箱子序号取模，是3的倍数把它的旋转角设置与时间相关，其他旋转角为定值。
+
+参考解答：
+<pre>
+glBindVertexArray(VAO);
+for(unsigned int i = 0; i < 10; i++)
+{
+    // calculate the model matrix for each object and pass it to shader before drawing
+    glm::mat4 model;
+    model = glm::translate(model, cubePositions[i]);
+    float angle = 20.0f * i; //定值，不是3的倍数，不会进入if所以angle不会改变。
+    if(i % 3 == 0)  // every 3rd iteration (including the first) we set the angle using GLFW's time function.
+        angle = glfwGetTime() * 25.0f;
+    model = glm::rotate(model, glm::radians(angle), glm::vec3(1.0f, 0.3f, 0.5f));
+    ourShader.setMat4("model", model);
+    
+    glDrawArrays(GL_TRIANGLES, 0, 36);           
+}
+</pre>
+
